--- a/Project/rai_build.yml
+++ b/Project/rai_build.yml
@@ -20,7 +20,7 @@ commands:
       # - /bin/bash -c "time ./m2 10000"
       # - /bin/bash -c "cuda-memcheck ./m2"
       # - /bin/bash -c "nsys profile --stats=true ./m2"
-      - /bin/bash -c "nv-nsight-cu-cli --section '.*' -o analysis_file ./m2 100"
+      # - /bin/bash -c "nv-nsight-cu-cli --section '.*' -o analysis_file ./m2 100"
       # - /bin/bash -c "./m2"
-      #- /bin/bash -c "./m3"
+      - /bin/bash -c "./m3 1000"
       #- /bin/bash -c "./final"
